@@ -1,5 +1,8 @@
 package moonbox.grid.deploy
 
+
+import java.util.Date
+
 import akka.actor.ActorRef
 import moonbox.common.util.Utils
 import moonbox.common.{MbConf, MbLogging}
@@ -11,16 +14,17 @@ private[deploy] class DriverRunner(
 	conf: MbConf,
 	val driverId: String,
 	val desc: DriverDescription,
-	val worker: ActorRef) extends MbLogging {
+	val worker: ActorRef,
+	val submitDate: Date) extends Serializable with MbLogging {
 
-	private var sparkAppHandle: SparkAppHandle = _
+	@transient private var sparkAppHandle: SparkAppHandle = _
 
 	def start() = {
-		new Thread("ClusterDriverRunner for " + driverId) {
+		new Thread("DriverRunner for " + driverId) {
 			override def run(): Unit = {
 				try {
 					val launcher = new SparkLauncher()
-
+					//launcher.redirectOutput(new File(System.getProperty("user.dir") + File.separator + driverId + ".log"))
 					launcher
 						.setAppName(driverId)
 						.setMaster(desc.master)
@@ -29,17 +33,16 @@ private[deploy] class DriverRunner(
 						}
 					launcher
 						.setMainClass(desc.mainClass)
-						.addAppArgs() //app args add here
-						.setConf("spark.hadoop.yarn.resourcemanager.address", "172.16.231.133:8032")
-						.setConf("spark.yarn.access.namenodes", "hdfs://172.16.231.133:8020")
-						.setConf("spark.yarn.am.memory", "512m")
-						/*.setConf(SparkLauncher.DRIVER_EXTRA_JAVA_OPTIONS, "-XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:-UseGCOverheadLimit -Dlog4j.configuration=sparkx.log4j.properties -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/moonbox/gc/,spark.executor.extraJavaOptions=-XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:-UseGCOverheadLimit -Dlog4j.configuration=sparkx.log4j.properties -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/moonbox/gc")*/
+						.addAppArgs(desc.toAppArgs:_*)
 						.setVerbose(false)
-					    .setSparkHome("/Users/wanghao/Downloads/spark-2.2.0-bin-hadoop2.7")
-
-					launcher.setAppResource(Utils.getYarnAppJar().getOrElse(throw new Exception("no find yarn app in env")))
+						.setSparkHome("/Users/wanghao/Downloads/spark-2.2.0-bin-hadoop2.7")
+						.setAppResource(desc.appResource)
+					desc.toConf.foreach { case (k, v) =>
+						launcher.setConf(k, v)
+					}
 
 					Utils.getRuntimeJars().foreach{ launcher.addJar }
+
 					sparkAppHandle = launcher.startApplication(new SparkAppHandle.Listener {
 						override def infoChanged(handle: SparkAppHandle): Unit = {
 						}
@@ -62,13 +65,13 @@ private[deploy] class DriverRunner(
 								case SparkAppHandle.State.FINISHED =>
 									DriverState.FINISHED
 							}
-							worker ! DriverStateChanged(driverId, state, None)
+							worker ! DriverStateChanged(driverId, state, Option(handle.getAppId), None)
 						}
 					})
 				} catch {
 					case e: Exception =>
 						logError("Launch cluster driver failed.", e)
-						worker ! DriverStateChanged(driverId, DriverState.ERROR, Some(e))
+						worker ! DriverStateChanged(driverId, DriverState.ERROR, None, Some(e))
 				}
 			}
 		}.start()
@@ -78,8 +81,13 @@ private[deploy] class DriverRunner(
 		val appId = if (sparkAppHandle != null) {
 			sparkAppHandle.getAppId
 		} else "<unknown>"
-		logInfo(s"Killing yarn application with id: $appId.")
-		sparkAppHandle.stop()
+		logInfo(s"Killing application with id: $appId.")
+		if (sparkAppHandle != null) {
+			sparkAppHandle.stop()
+		} else {
+			logWarning(s"SparkAppHandle is null, driver id is $driverId ")
+		}
+
 	}
 
 }
